[jobs-api] use pydantic for all models
* use pydantic for quota models
* use pydantic for health_check models
* use pydantic for CronExpression models
* use pydantic for Job model
* fix tests

Bug: T389118
